--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-pluginGroup=io.github.Polymeta.PrisonUtils
-pluginId=prisonutils
+pluginGroup=io.github.rm2023.rbounty
+pluginId=rbounty
 pluginVersion=1.2.4
