--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,28 +3,31 @@
 
 name: Java CI with Gradle
 
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ master, main ]
   pull_request:
-    branches: [ master ]
-
+    branches: [ master, main ]
 jobs:
-  build:
-
+  gradle:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
-    - uses: actions/upload-artifact@v2
-      with:
-        name: Package
-        path: build/libs
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 8
+
+      # Execute Gradle commands in GitHub Actions workflows
+      # => https://github.com/marketplace/actions/gradle-command
+      - uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: build
+          wrapper-cache-enabled: true
+          dependencies-cache-enabled: true
+          configuration-cache-enabled: true
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Package
+          path: build/libs
