--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,7 +23,7 @@ jobs:
       # => https://github.com/marketplace/actions/gradle-command
       - uses: eskatos/gradle-command-action@v1
         with:
-          wrapper-directory: gradle/wrapper
+          wrapper-directory: ""
           arguments: build
           wrapper-cache-enabled: true
           dependencies-cache-enabled: true
